Improved parsing methods in `StringJsonReader` to provide better position tracking and enhanced handling for invalid JSON input. Track the previous position right in the StringJsonReader